<resources>
    <string name="app_name">Gyanoday</string>
    <string name="app_name_hindi">श्री ज्ञानोदय दिगम्बर जैन मंदिर</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">@string/app_name_hindi</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">More</string>
    <string name="title_jinvani">Jinvani</string>
    <string name="title_about">About</string>

    <string name="NiyamCategoryLabel">अपना वर्ग चुने </string>
    <string name="NiyamChildBtnText">बच्चो के लिए</string>
    <string name="NiyamAdultBtnText">बड़ो के लिए</string>
    <string name="NiyamBtnText">नियम चुने</string>
    <string name="NiyamDetailsTitle">आपका आज का नियम है </string>

    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="HomeNewsLabel">News : </string>

    <string name="PujaSearchHint">यहाँ खोजे</string>
    <string name="title_activity_trust">Trustee</string>

    <string name="HomeNotification">Notifications</string>
    <string name="title_activity_notification">Information</string>
    <string name="title_activity_notification_details">Details</string>
    <string name="OtherLabel">Others:</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="TempleName">Shri Gyanodaya Digambar Jain Tample</string>
    <string name="ContactTempleAdd"> Opp. Vaswani Brentwood,
    \nVIBGYOR school Road, Off, \nVarthur Main Rd, Thubarahalli, Munnekollal,\nBengaluru, Karnataka 560066</string>
    <string name="ContactPhone">+919845996468(Mukesh Bhaiji) \n+919341811342(Rakesh Barya) \n+919880105112(Jambu kumar Jain) \n+919986313341(Ashok Jain) \n+919902490245(Alok Jain)</string>

    <string name="ContactMail">gyanodaybangalore@gmail.com</string>

    <string name="title_activity_feedback">Feedback</string>

    <string name="FeedbackName">Your Name</string>
    <string name="FeedbackEmail">Email</string>
    <string name="FeedbackPhoneNo">Mobile Number</string>
    <string name="FeedbackFeedback">Feedback</string>
    <string name="FeedbackBtn">Submit</string>

    <string name="InvalidNameMsg">Please Enter Your Name</string>
    <string name="InvalidFeedbackMsg">Please Enter Your Feedback</string>
    <string name="InvalidFirstNameLengthMsg">First Name must be greater the 3 character</string>
    <string name="InvalidLastNameMsg">Please Enter Last Name</string>
    <string name="InvalidEmailMsg">Please Enter E-mail Address</string>
    <string name="InvalidEmailValidationMsg">Please Enter Valid Email Address</string>
    <string name="InvalidPasswordMsg">Please Enter Password</string>
    <string name="InvalidMobileLengthMsg">Your Mobile number must be at least 10 digit in length.</string>
    <string name="InvalidMobileMsg">Please enter valid mobile number.</string>
    <string name="title_activity_donation">Donation</string>

    <string name="DonationLabel1">Sri Gyanoday Digambar Jain Trust</string>
    <string name="DonationLabel2">State Bank of India, PBB Branch Koramangala, Bangalore\nCurrent account number – 33061339163\nIFSC code - SBIN0004163</string>


    <string name="DonationMsg">दान के लिए वर्तमान ही सबसे उचित समय है</string>
    <string name="title_activity_rule">Niyam</string>
    <string name="title_activity_tirth">Tirth</string>
    <string name="title_activity_gallery">Gallery</string>


    <string name="AboutUs">\nजय जिनेन्द्र, \n\nदुनिया के सबसे प्राचीन धर्म जैन धर्म को श्रमणों का धर्म कहा जाता है। वेदों में प्रथम तीर्थंकर ऋषभनाथ का उल्लेख मिलता है। माना जाता है कि वैदिक साहित्य में जिन यतियों और व्रात्यों का उल्लेख मिलता है वे ब्राह्मण परंपरा के न होकर श्रमण परंपरा के ही थे। मनुस्मृति में लिच्छवि, नाथ, मल्ल आदि क्षत्रियों को व्रात्यों में गिना है।

जैन धर्म का मूल भारत की प्राचीन परंपराओं में रहा है। आर्यों के काल में ऋषभदेव और अरिष्टनेमि को लेकर जैन धर्म की परंपरा का वर्णन भी मिलता है। महाभारतकाल में इस धर्म के प्रमुख नेमिनाथ थे।

जैन धर्म के 22वें तीर्थंकर अरिष्ट नेमिनाथ भगवान कृष्ण के चचेरे भाई थे। जैन धर्म ने कृष्ण को उनके त्रैसष्ठ शलाका पुरुषों में शामिल किया है, जो बारह नारायणों में से एक है। ऐसी मान्यता है कि अगली चौबीसी में कृष्ण जैनियों के प्रथम तीर्थंकर होंगे।

ईपू आठवीं सदी में 23वें तीर्थंकर पार्श्वनाथ हुए, जिनका जन्म काशी में हुआ था। काशी के पास ही 11वें तीर्थंकर श्रेयांसनाथ का जन्म भी हुआ था। इन्हीं के नाम पर सारनाथ का नाम प्रचलित है।

भगवान पार्श्वनाथ तक यह परंपरा कभी संगठित रूप में अस्तित्व में नहीं आई। पार्श्वनाथ से पार्श्वनाथ संप्रदाय की शुरुआत हुई और इस परंपरा को एक संगठित रूप मिला। भगवान महावीर पार्श्वनाथ संप्रदाय से ही थे।</string>
    <string name="title_activity_general_list">name</string>
    <string name="title_activity_general_details">Details</string>

    <string name="LocationGoSettingMsg">To help you to use this app, access to your storage. Tap settings > permissions, and turn Storage on.</string>
    <string name="PermissionGoSettingTitle">Go settings</string>
    <string name="title_activity_tample_list">List</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="ContactLabel">संपर्क करे :</string>
    <string name="StayLabel"> धर्मशाला: </string>
    <string name="FoodLabel">भोजन व्यवस्था:</string>
    <string name="YesHindiLabel">हां है </string>
    <string name="NoHindiLabel">नहीं है </string>
    <string name="MapDirection">Direction</string>

    <string name="menu_jinvani_hindi">जिनवाणी</string>
    <string name="menu_information_hindi">सूचनाएँ</string>
    <string name="menu_donation_hindi">दान</string>
    <string name="menu_trust_hindi">ट्रस्टी</string>
    <string name="menu_contactus_hindi">संपर्क करे</string>
    <string name="menu_gallery_hindi">गैलरी</string>
    <string name="menu_tirth_hindi">तीर्थ</string>
    <string name="menu_feedback_hindi">सुझाव</string>
    <string name="menu_niyam_hindi">नियम</string>

    <string name="jai_jinendra">|| जय जिनेन्द्र  ||</string>
    <string name="title_activity_panch_kalanak">पंचकल्याणक २०१९</string>
    <string name="panchkalyank_label">Panchkalyanak 2019</string>

    <string name="chayanit_patra_label">पंचकल्याणक चयनित पात्र </string>

</resources>
